// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadInfo component should render the component in a hidden state per default 1`] = `
<div id="upload-info" class="oc-rounded oc-box-shadow-medium oc-hidden">
  <div class="upload-info-title oc-flex oc-flex-between oc-flex-middle oc-px-m oc-pt-m"><span class="oc-flex oc-flex-middle"></span>
    <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" id="close-upload-info-btn">
      <oc-icon-stub name="close" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
    </oc-button-stub>
  </div>
  <div class="upload-info-status-bar oc-px-m"></div>
  <div class="upload-info-successful-uploads oc-px-m oc-pb-m">
    <ul class="oc-list"></ul>
  </div>
</div>
`;

exports[`UploadInfo component should show the component 1`] = `
<div id="upload-info" class="oc-rounded oc-box-shadow-medium">
  <div class="upload-info-title oc-flex oc-flex-between oc-flex-middle oc-px-m oc-pt-m"><span class="oc-flex oc-flex-middle"></span>
    <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" id="close-upload-info-btn">
      <oc-icon-stub name="close" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
    </oc-button-stub>
  </div>
  <div class="upload-info-status-bar oc-px-m"></div>
  <div class="upload-info-successful-uploads oc-px-m oc-pb-m">
    <ul class="oc-list"></ul>
  </div>
</div>
`;

exports[`UploadInfo component should show uploaded files with parent folder link 1`] = `
<div id="upload-info" class="oc-rounded oc-box-shadow-medium">
  <div class="upload-info-title oc-flex oc-flex-between oc-flex-middle oc-px-m oc-pt-m"><span class="oc-flex oc-flex-middle"></span>
    <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" id="close-upload-info-btn">
      <oc-icon-stub name="close" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
    </oc-button-stub>
  </div>
  <div class="upload-info-status-bar oc-px-m"></div>
  <div class="upload-info-successful-uploads oc-px-m oc-pb-m oc-pt-m">
    <ul class="oc-list">
      <li class="oc-flex oc-flex-middle">
        <oc-icon-stub name="check" filltype="fill" accessiblelabel="" type="span" size="small" variation="success" color=""></oc-icon-stub>
        <oc-resource-stub folderlink="[object Object]" parentfolderlink="[object Object]" resource="[object Object]" parentfoldernamedefault="All files and folders" ispathdisplayed="true" isextensiondisplayed="true" isthumbnaildisplayed="true"></oc-resource-stub>
      </li>
    </ul>
  </div>
</div>
`;

exports[`UploadInfo component should show uploaded files without parent folder link 1`] = `
<div id="upload-info" class="oc-rounded oc-box-shadow-medium">
  <div class="upload-info-title oc-flex oc-flex-between oc-flex-middle oc-px-m oc-pt-m"><span class="oc-flex oc-flex-middle"></span>
    <oc-button-stub type="button" size="medium" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium" id="close-upload-info-btn">
      <oc-icon-stub name="close" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
    </oc-button-stub>
  </div>
  <div class="upload-info-status-bar oc-px-m"></div>
  <div class="upload-info-successful-uploads oc-px-m oc-pb-m oc-pt-m">
    <ul class="oc-list">
      <li class="oc-flex oc-flex-middle">
        <oc-icon-stub name="check" filltype="fill" accessiblelabel="" type="span" size="small" variation="success" color=""></oc-icon-stub> <span class="oc-flex oc-flex-middle"><oc-resource-icon-stub resource="[object Object]" size="large" class="file_info__icon oc-mr-s"></oc-resource-icon-stub> <oc-resource-name-stub name="file" extension="" type="file" fullpath="" isextensiondisplayed="true" truncatename="true"></oc-resource-name-stub></span>
      </li>
    </ul>
  </div>
</div>
`;
